<resources>
    <string name="app_name">Financly</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="hint">*****</string>
    <string name="email">Email</string>
    <string name="nama">Nama</string>
</resources>