<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/daftar_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dasar"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/abeezee"
            android:gravity="center"
            android:text="Register"
            android:textColor="@color/ijo"
            android:textSize="40dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="220dp"
                android:layout_height="220dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/gambar_login" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp">

                <LinearLayout
                    android:id="@+id/layoutEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/bg_input"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="15dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_username"
                        android:layout_marginLeft="15dp"
                        app:tint="@color/ijo" />

                    <EditText
                        android:id="@+id/edtNama"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@null"
                        android:hint="@string/nama"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:paddingStart="15dp"
                        android:paddingEnd="10dp"
                        android:textColor="@color/ijo"
                        android:textSize="15sp"
                        android:paddingLeft="15dp"
                        android:paddingRight="10dp" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:background="@color/dasar"
                    android:paddingStart="7dp"
                    android:paddingEnd="7dp"
                    android:text="@string/nama"
                    android:textColor="@color/ijo"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/layoutEmail"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/layoutEmail"
                    android:layout_marginLeft="48dp" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp">

                <LinearLayout
                    android:id="@+id/layoutNama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_input"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="15dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_username"
                        android:layout_marginLeft="15dp"
                        app:tint="@color/ijo" />

                    <EditText
                        android:id="@+id/edtUsername"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@null"
                        android:hint="@string/email"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"
                        android:paddingStart="15dp"
                        android:paddingEnd="10dp"
                        android:textColor="@color/ijo"
                        android:textSize="15sp"
                        android:paddingLeft="15dp"
                        android:paddingRight="10dp" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:background="@color/dasar"
                    android:paddingStart="7dp"
                    android:paddingEnd="7dp"
                    android:text="@string/email"
                    android:textColor="@color/ijo"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/layoutNama"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/layoutNama"
                    android:layout_marginLeft="48dp" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp">

                <LinearLayout
                    android:id="@+id/layoutPw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_input"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="15dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_password"
                        android:layout_marginLeft="15dp"
                        app:tint="@color/ijo" />

                    <EditText
                        android:id="@+id/edtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@null"
                        android:hint="@string/hint"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:paddingStart="15dp"
                        android:paddingEnd="10dp"
                        android:textColor="@color/ijo"
                        android:textSize="15sp"
                        android:paddingLeft="15dp"
                        android:paddingRight="10dp" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:background="@color/dasar"
                    android:paddingStart="7dp"
                    android:paddingEnd="7dp"
                    android:text="@string/password"
                    android:textColor="@color/ijo"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/layoutPw"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/layoutPw"
                    android:layout_marginLeft="48dp" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp">

                <LinearLayout
                    android:id="@+id/layoutPw2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bg_input"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="15dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_password"
                        android:layout_marginLeft="15dp"
                        app:tint="@color/ijo" />

                    <EditText
                        android:id="@+id/edtPassword2"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@null"
                        android:hint="@string/hint"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"
                        android:paddingStart="15dp"
                        android:paddingEnd="10dp"
                        android:textColor="@color/ijo"
                        android:textSize="15sp"
                        android:paddingLeft="15dp"
                        android:paddingRight="10dp" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="48dp"
                    android:background="@color/dasar"
                    android:paddingStart="7dp"
                    android:paddingEnd="7dp"
                    android:text="@string/konfirmasi_password"
                    android:textColor="@color/ijo"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/layoutPw2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/layoutPw2"
                    android:layout_marginLeft="48dp" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDaftar"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@drawable/bg_button_login"
                android:text="Daftar"
                android:textColor="@color/dasar" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sudah terdaftar?"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" Login"
                    android:textColor="@color/ijo"
                    android:textSize="15dp" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>